--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,13 @@
 body{
     background: white;
 }
+
+.svg-logo{
+    min-width: 90px;
+    height: 20px;
+}
+
+.blur-bg-white{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+}
